--- a/report.qmd
+++ b/report.qmd
@@ -43,11 +43,9 @@ Various metrics tailored to each rule change were investigated to perform a robu
 +-------------------------------------------------------------------------------+---------------------------------------------------------------------------------------+
 | Rule change                                                                   | Outcomes to compare pre/post                                                          |
 +===============================================================================+=======================================================================================+
-| 3-batter minimum                                                              | -   Number of pitchers used per game                                                  |
+| Base stealing encouragements (bigger basements, pitcher disengagement policy) | -   Number of attempted steals by teams per season                                    |
 |                                                                               |                                                                                       |
-|                                                                               | -   Number of pitching changes in the middle of an inning per game                    |
-|                                                                               |                                                                                       |
-|                                                                               | -   Proportion of games with at least one, two, and three mid-inning pitching changes |
+|                                                                               | -   Success rate of steals by teams per season                                        |
 +-------------------------------------------------------------------------------+---------------------------------------------------------------------------------------+
 | Extra-innings baserunner                                                      | -   Number of extra innings required to complete a tied game at the 9th inning        |
 |                                                                               |                                                                                       |
@@ -61,23 +59,25 @@ Various metrics tailored to each rule change were investigated to perform a robu
 |                                                                               |                                                                                       |
 |                                                                               | -   Batters until first score in marathon games                                       |
 +-------------------------------------------------------------------------------+---------------------------------------------------------------------------------------+
+| Pitch clock                                                                   | -   Length of individual plays                                                        |
+|                                                                               |                                                                                       |
+|                                                                               | -   Combined game duration (action time, excluding non-play time)                     |
++-------------------------------------------------------------------------------+---------------------------------------------------------------------------------------+
 | Universal designated hitter                                                   | -   Number of at-bats by pitcher position versus DH position                          |
 |                                                                               |                                                                                       |
 |                                                                               | -   On base percentage of pitcher position versus DH position                         |
 |                                                                               |                                                                                       |
 |                                                                               | -   On-base-plus-slugging of pitcher position versus DH position                      |
 +-------------------------------------------------------------------------------+---------------------------------------------------------------------------------------+
-| Base stealing encouragements (bigger basements, pitcher disengagement policy) | -   Number of attempted steals by teams per season                                    |
-|                                                                               |                                                                                       |
-|                                                                               | -   Success rate of steals by teams per season                                        |
-+-------------------------------------------------------------------------------+---------------------------------------------------------------------------------------+
-| Pitch clock                                                                   | -   Length of individual plays                                                        |
-|                                                                               |                                                                                       |
-|                                                                               | -   Combined game duration (action time, excluding non-play time)                     |
-+-------------------------------------------------------------------------------+---------------------------------------------------------------------------------------+
 | Defensive shift ban                                                           | -   Team BABIP stat across seasons                                                    |
 |                                                                               |                                                                                       |
 |                                                                               | -   Outcome of plays (hit, out, etc) when batter makes pull-side contact              |
++-------------------------------------------------------------------------------+---------------------------------------------------------------------------------------+
+| 3-batter minimum                                                              | -   Number of pitchers used per game                                                  |
+|                                                                               |                                                                                       |
+|                                                                               | -   Number of pitching changes in the middle of an inning per game                    |
+|                                                                               |                                                                                       |
+|                                                                               | -   Proportion of games with at least one, two, and three mid-inning pitching changes |
 +-------------------------------------------------------------------------------+---------------------------------------------------------------------------------------+
 
 ### WIP Statistical analysis
@@ -90,9 +90,9 @@ Various metrics tailored to each rule change were investigated to perform a robu
 
 ### WIP Software, reproducibility, and data licensing
 
-All data-retrieval and preprocessing was executed using Python 3.11.6. The exploration and final analysis were written with R 4.4.3 within a lightweight Docker container. Versioned scripts and written reports were saved on a public GitHub repository to ensure transparency.
+All data-retrieval and preprocessing was executed using [Python 3.11.6](https://www.python.org/downloads/release/python-3116/ "Python Release 3.11.6"). The exploration and final analysis were written with [R 4.4.3](https://cran.r-project.org/bin/windows/base/old/4.4.3/ "CRAN - R 4.4.3") within a lightweight Docker container. Versioned scripts and written reports were saved on a public [GitHub repository](https://github.com/hicks017/MLB-rule-changes "MLB Rule Changes - Christian Hicks") to ensure transparency.
 
-Raw data originated from the free, official MLB Stats API. No personal player data or personally identifiable information were used.
+Raw data originated from the free, official [MLB Stats API.](https://statsapi.mlb.com/api/ "MLB Stats API") No personal player data or personally identifiable information were used.
 
 ```{r}
 #| code-summary: Packages
@@ -106,6 +106,7 @@ library(ggplot2)
 library(broom)
 library(skimr)
 library(gtsummary)
+library(ggsignif)
 
 # Use a flexible route to the data file path
 if (basename(getwd()) == "explore data") {
@@ -116,6 +117,16 @@ if (basename(getwd()) == "explore data") {
 ```
 
 ## Results
+
+### Base stealing encouragements
+
+### Extra-innings baserunner
+
+### Pitch clock
+
+### Universal designated hitter
+
+### Defensive shift ban
 
 ### 3-batter minimum
 
@@ -174,7 +185,7 @@ ttest_pitching_change_ci <- sprintf(
 )
 ```
 
-With a three-batter minimum, the Left-handed One-Out Guy (LOOGY) and other specialty roles were mostly eliminated. Fewer short-term pitchers should have led to fewer pitchers used in a game, though the change was barely noticeable throughout each season (@fig-pitchers). In fact, there was a very slight increase. The mean number of pitchers used per game was `r ttest_pitching_change_estimate` higher after the 2020 rule change (95% CI: `r ttest_pitching_change_ci`. See @tbl-pitchers).
+With a three-batter minimum, the Left-handed One-Out Guy (LOOGY) and other specialty roles were mostly eliminated. Fewer short-term pitchers should have led to fewer pitchers used in a game, though the change was barely noticeable throughout each season (@fig-pitchers). In fact, there was a very slight increase. The mean number of pitchers used per game was `r ttest_pitching_change_estimate` higher after the 2020 rule change (95% CI: `r ttest_pitching_change_ci`. @tbl-pitchers).
 
 ```{r}
 #| code-summary: Plot
@@ -273,7 +284,7 @@ ttest_mid_change_ci <- sprintf(
 )
 ```
 
-A three-batter minimum should eliminate the opportunity to call in a pitcher for a single batter, which would decrease the number of pitching changes that occur in the middle of an inning. The number of mid-inning pitching changes decreased since 2020, but the magnitude was small (@fig-mid-inning). The mean number of mid-inning pitching changed by `r ttest_mid_change_estimate` after the 2020 rule change (95% CI: `r ttest_mid_change_ci`. See @tbl-mid-inning).
+A three-batter minimum should eliminate the opportunity to call in a pitcher for a single batter, which would decrease the number of pitching changes that occur in the middle of an inning. The number of mid-inning pitching changes decreased since 2020, but the magnitude was small (@fig-mid-inning). The mean number of mid-inning pitching changed by `r ttest_mid_change_estimate` after the 2020 rule change (95% CI: `r ttest_mid_change_ci`. @tbl-mid-inning).
 
 ```{r}
 #| code-summary: Plot
@@ -355,7 +366,7 @@ pauses <-
   tibble::deframe()
 ```
 
-A mid-inning pitching change would add a pause in play that was not already scheduled, such as pauses in between innings. The differences in proportions of games with pauses in play due to mid-inning pitching changes were `r pauses[["pause_01"]]` for games with any added pauses, `r pauses[["pause_02"]]` for games with at least 2 pauses, and `r pauses[["pause_03"]]` for games with at least 3 pauses (See @tbl-pauses).
+A mid-inning pitching change would add a pause in play that was not already scheduled, such as pauses in between innings. Games with such pauses were slightly less frequent after the 3-batter minimum implementation(@fig-pauses). The differences in proportions of games with pauses in play due to mid-inning pitching changes were `r pauses[["pause_01"]]` for games with any added pauses, `r pauses[["pause_02"]]` for games with at least 2 pauses, and `r pauses[["pause_03"]]` for games with at least 3 pauses (@tbl-pauses).
 
 ```{r}
 #| code-summary: Plot
@@ -377,9 +388,19 @@ tbl_changes_per_game_yearly |>
   
   # Plot
   ggplot(aes(x = pause_type, y = proportion, fill = rule_change)) +
-  geom_bar(stat = "identity", position = "dodge", alpha = 0.75) +
+  geom_bar(stat = "identity", position = "dodge", alpha = 0.75, color = "gray10") +
+  
+  # Significance lines
+  geom_signif(
+    y_position = c(0.93, 0.68, 0.41),
+    xmin = c(0.75, 1.75, 2.75), 
+    xmax = c(1.25, 2.25, 3.25),
+    annotation = c("*", "***", "***"),
+    tip_length = 0
+  ) +
   
   # Format
+  scale_y_continuous(limits = c(0, 1)) +
   scale_fill_manual(values = c(
     "No minimum" = dodger_red,
     "3-batter minimum" = dodger_blue
@@ -391,7 +412,8 @@ tbl_changes_per_game_yearly |>
     axis.title = element_blank()
   ) +
   labs(
-    title = "Proportion of games with pauses in play because of mid-inning pitching changes"
+    title = "Proportion of games with pauses in play because of mid-inning pitching changes",
+    caption = "*p<.05\n***p<.001"
   )
 ```
 
